--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "license": "Apache 2",
     "dependencies": {},
     "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-gitbook": "0.2.3",
-        "grunt-gh-pages": "0.9.1",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-http-server": "0.0.4"
+        "grunt": "~0.4.5",
+        "grunt-gitbook": "~1.5.0",
+        "grunt-gh-pages": "~0.10.0",
+        "grunt-contrib-clean": "~0.6.0",
+		"grunt-contrib-watch": "~0.6.1",
+        "grunt-http-server": "~1.4.0",
+		"grunt-open": "~0.2.3"
     },
     "peerDependencies": {
-        "grunt": "~0.4.1"
+        "grunt": "~0.4.5"
     }
 }
